--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,21 +19,14 @@
     <string name="back_button">Back</string>
     <string name="delete">Delete</string>
     <string name="share">Share</string>
+    <string name="save">Save</string>
     <string name="delete_question">Are you sure you want to delete?</string>
     <string name="no_item_description">Oops!\nNo items in the inventory.\nTap + to add.</string>
     <string name="edit_item_title">Edit Item</string>
     <string name="item">Item</string>
     <string name="item_detail_title">Item Details</string>
     <string name="item_entry_title">Add Item</string>
-    <string name="settings_title">Settings</string>
-    <string name="shipper_name_default">Default shipper name</string>
-    <string name="shipper_email_default">Default shipper E-mail</string>
-    <string name="shipper_phone_default">Default shipper phone</string>
-    <string name="hide_sensitive_data">Hide sensitive data</string>
-    <string name="disable_sharing">Disable sharing</string>
-    <string name="save_title">Save</string>
     <string name="item_name_req">Item Name*</string>
-    <string name="enable_default_fields">Enable default fields</string>
     <string name="item_price_req">Item Price*</string>
     <string name="no">No</string>
     <string name="price">Price</string>
@@ -47,7 +40,19 @@
     <string name="supplier_email">Supplier E-mail*</string>
     <string name="supplier_phone">Supplier Phone*</string>
     <string name="save_action">Save</string>
+    <string name="load_action">Load</string>
     <string name="sell">Sell</string>
     <string name="yes">Yes</string>
     <string name="required_fields">*required fields</string>
+
+    <string name="settings_title">Settings</string>
+    <string name="supplier_name_default">Default supplier name</string>
+    <string name="supplier_phone_default">Default supplier phone</string>
+    <string name="supplier_email_default">Default supplier e-mail</string>
+    <string name="enable_default_settings">Enable default fields</string>
+    <string name="hide_sensitive_data">Hide sensitive data</string>
+    <string name="enable_sharing">Enable sharing</string>
+    <string name="save_title">Save settings</string>
+
+    <string name="hiden_data">******</string>
 </resources>
